2006-07-09  Iain <iain@gnome.org>

	* FindStation.cs: Find user station works

2006-07-09  Iain <iain@gnome.org>

	* FindStation.cs: Add Neighbour searching

	* NeighbourView.cs: View to show neighbours

2006-07-09  Iain <iain@gnome.org>

	* configure.ac: Update to version 1

2006-07-09  Iain <iain@gnome.org>

	* Url encode artist names before sending them gfor tagging

2006-07-08  Iain <iain@gnome.org>

	* src/PlayerWindow.cs: Make the play/pause button work correctly.

2006-07-08  Iain <iain@gnome.org>

	* src/RecentStations.cs: Limit the stations to the 10 most recent

2006-07-08  Iain <iain@gnome.org>

	* src/PlayerWindow.cs: Open the browser at the journal page for the 
	currently playing song.

2006-07-08  Iain <iain@gnome.org>

	* Applied patch from Brian Pepple to add a .desktop file.

2006-07-08  Iain <iain@gnome.org>

	* src/TagDialog.cs: Close the dialog and fill the combo with tags

2006-07-08  Iain <iain@gnome.org>

	* src/TagDialog.cs: Tag stuff.

2006-04-21  Iain <iain@gnome.org>

	* src/InternalProcess.cs: Copied from f-spot.

	* src/PlayerWindow.cs: Use gnome-open to show urls

	* src/InfoWindow.cs: Ditto

2006-04-21  Iain <iain@gnome.org>

	* src/ImageLoader.cs: Handle 404s in the image...useful old last.fm
	returns a nonexistent cover image rather than just not setting an 
	image.

2006-04-21  Iain <iain@gnome.org>

	* src/FMRequest.cs: Moved this here from FMConnection.cs

	* src/InfoWindow.cs: Moved the Request/Parsing code from FMC.cs

	* src/FindStation.cs: Moved the Request/Parsing code from FMC.cs

2006-04-21  Iain <iain@gnome.org>

	* src/PlayerWindow.cs: Apply patch from Adam Lofts to ellipsize the
	labels.

2006-04-15  Iain <iain@gnome.org>

	* src/PlayerWindow.cs: Don't escape strings if the string is null.

	* src/StringUtils.cs: Ditto

2006-04-15  Iain <iain@gnome.org>

	* src/PlayerWindow.cs: Merge patch from Jason Quigley to turn on
	subscriber only stations.

2006-04-15  Iain <iain@gnome.org>
